# Causes-and-Contributions

./: main.py  netlify.toml  pyproject.toml  requirements.txt
UI/Cause_UI/: index.html  style.css
UI/Contribution_UI/: index.html  style.css
api_app/: admin.py  models.py  serializers.py  urls.py  views.py
api_app/migrations/: 0001_initial.py  0002_rename_image_url_causes_image.py  0003_rename_image_causes_image_url.py  0004_alter_contribute_receipt_pdf.py
core/: settings.py  urls.py
