[project]
name = "api-drills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=6.0.4",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "python-dotenv>=1.2.2",
]
